--- a/Recline Product.html
+++ b/Recline Product.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Mahmudul Hasan">
 
 	<!-- Title -->
-	<title>Welcome</title>
+	<title>Recline Supplements</title>
 
 	<!-- Fav Icon -->
 	<link rel="icon" href="img/fav.png" />
