--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<h1>Stress Less, <br>
 								Live More</h1>
 							<p>Total Body Stress Support</p>
-							<a href="#">SHOP NOW</a>
+							<a href="https://www.reclinesupplements.com/recline%20product">SHOP NOW</a>
 						</div>
 					</div>
 				</div>
@@ -120,7 +120,7 @@
 								cortisol levels, and offers significant reduction in other <br>
 								stress related symptoms such as anxiety, irritability, <br>
 								and sleeplessness</p>
-							<a href="#">SHOP NOW</a>
+							<a href="https://www.reclinesupplements.com/recline%20product">SHOP NOW</a>
 						</div>
 					</div>
 				</div>
