--- a/Recline Product.html
+++ b/Recline Product.html
@@ -42,7 +42,7 @@
 	<div class="main-menu-area">
 		<div class="main-menu-wrapper">
 			<div class="logo-area">
-				<h1>recline</h1>
+				<a href="index.html"><h1>recline</h1></a>
 			</div>
 		</div>
 		<div class="sm-bar">
